styles.css
*,
*::after,
*::before {
  box-sizing: border-box;
}
body {
  display: flex;
  height: 100vh;
  flex-direction: column;
  margin: 0;
  background-color: #f1f1f1;
  font-family: Arial, Helvetica, sans-serif;
}

ul {
  list-style: none;
  margin: 0;
  color: #e5e7eb;
}
a:link {
  text-decoration: none;
  color: #e5e7eb;
}
#hero {
  display: flex;
  flex-direction: column;
  flex: 1;
  padding: 12px;
}
nav {
  display: flex;
}
nav ul {
  display: flex;
  gap: 20px;
}
nav h4 {
  margin: 0 auto 0 0;
}
main {
  display: flex;
  align-items: center;
  flex-direction: column;
  flex: 1;
}
h1 {
  margin: 0;
}

#hero {
  display: flex;
  flex: 1;
  padding: 20px 20%;
  gap: 20px;
}
.hero_content {
  display: flex;
  flex-wrap: wrap;

  margin: auto 0;
  gap: 40px;
}
.hero_content h1 {
  margin: 0;
  font-size: 2rem;
  font-weight: 900;
}
.hero_cta {
  flex: 1 1 250px;
}
.hero-img {
  display: flex;
  flex: 1 1 200px;
  max-width: 900px;
  background-color: grey;
  justify-content: center;
  align-items: center;
}
.hero-img-plc_holder {
  display: flex;
}
.hero-img p {
  font-size: 10px;
}
#hero p,
#hero a {
  margin: 0;
  font-size: 0.8rem;
}
#hero,
footer {
  background-color: #1f2937;
}
#hero,
#CTA,
footer,
button,
a {
  color: #e5e7eb;
}
footer {
  text-align: center;
  font-size: 0.65rem;
  padding: 20px;
}
#random_info {
  flex: 3 0 280px;
  justify-content: center;
}
.some_ran_header {
  text-align: center;
  font-size: 0.9rem;
}
.some_rando_cards {
  display: flex;
  justify-content: center;
  padding: 20px 190px;
  gap: 20px;
  text-align: center;
  flex-wrap: wrap;
}
.rando_cards {
  display: flex;
  max-width: 90px;
  flex: 1 0 90px;
  flex-direction: column;
}
.rando_cards p {
  font-size: 0.7rem;
  font-weight: 100;
  margin: 5px 0;
}

.card_img_holder {
  border: 2px solid #3882f6;
  border-radius: 8px;
  height: 90px;
}
#quote_block {
  display: flex;
  flex-direction: column;
  padding: 40px 0;
  width: 100%;
  flex: 3 0 200px;
  background-color: #e5e7eb;
  justify-content: center;
  align-items: center;
}
blockquote {
  display: flex;
  flex-direction: column;
  font-family: Verdana, Geneva, Tahoma, sans-serif;
  font-size: 1.1rem;
  line-height: 1.5rem;
  font-weight: 100;
  width: 50%;
  margin: 0;
  padding: 0;
}
cite {
  text-align: right;
  font-style: normal;
  font-size: 0.9rem;
}
#CTA {
  padding: 40px;
}
#CTA aside {
  display: flex;
  padding: 25px 110px;
  border-radius: 8px;
}
.cta-content {
  display: flex;
  background-color: #3882f6;
  gap: 10px;
}
.cta-text p {
  font-size: 0.7rem;
}
.cta-text {
  flex: 10;
  display: flex;
  flex-direction: column;
}
#CTA button {
  flex: 1;
  width: 150px;
}
.cta-text h4,
.cta-text p {
  margin: 0;
}

button {
  flex: 0;
  background-color: #3882f6;
  margin-top: 10px;
  font-size: 10px;
  font-weight: 700;
  border: 1px solid white;
  border-radius: 4px;
  padding: 4px 15px;
}
#hero button {
  border: none;
}

